--- a/nxtecs/skills.html
+++ b/nxtecs/skills.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/skills.css">
+    <link rel="stylesheet" href="inc/classform.html">
 
     <link rel="stylesheet" href="assets/boxicons/css/boxicons.min.css">
 
@@ -186,7 +187,7 @@
                                 <h4>Walter White</h4>
                                 <span>15 years of experience</span>
                                 <br>
-                                <button type="button" class="block">Book a call</button>
+                                <button onclick="document.getElementById('id01').style.display='block'" type="button" class="block">Book a call</button>
                                 <button type="button" class="block">Book a class</button>
                             </div>
                         </div>
@@ -207,7 +208,7 @@
                             <div class="member-info">
                                 <h4>Sarah Jhonson</h4>
                                 <span>12 years of experience</span> <br>
-                                <button type="button" class="block">Book a call</button>
+                                <button onclick="document.getElementById('id01').style.display='block'" type="button" class="block">Book a call</button>
                                 <button type="button" class="block">Book a class</button>
                             </div>
                         </div>
@@ -228,7 +229,51 @@
                             <div class="member-info">
                                 <h4>William Anderson</h4>
                                 <span>16 years of experience</span> <br>
-                                <button type="button" class="block">Book a call</button>
+                                <button onclick="document.getElementById('id01').style.display='block'" type="button"
+                                    class="block">Book a call</button>
+
+
+                              <!--  <h2>Modal Signup Form</h2>-->
+
+
+
+                                <div id="id01" class="modal">
+                                    <span onclick="document.getElementById('id01').style.display='none'" class="close"
+                                        title="Close Modal">&times;</span>
+                                    <form class="modal-content" action="/action_page.php">
+                                        <div class="container">
+                                            <h1>Sign Up</h1>
+                                            <p>Please fill in this form to create an account.</p>
+                                            <hr>
+                                            <label for="email"><b>Name</b></label>
+                                            <input type="text" placeholder="Enter Name" name="name" required>
+
+                                            <label for="psw"><b>Password</b></label>
+                                            <input type="password" placeholder="Enter Password" name="psw" required>
+
+                                            <label for="psw-repeat"><b>Repeat Password</b></label>
+                                            <input type="password" placeholder="Repeat Password" name="psw-repeat"
+                                                required>
+
+                                            <label>
+                                                <input type="checkbox" checked="checked" name="remember"
+                                                    style="margin-bottom:15px"> Remember me
+                                            </label>
+
+                                            <p>By creating an account you agree to our <a href="#"
+                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+                                            <div class="clearfix">
+                                                <button type="button"
+                                                    onclick="document.getElementById('id01').style.display='none'"
+                                                    class="cancelbtn">Cancel</button>
+                                                <button type="submit" class="signupbtn">Sign Up</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+
+
                                 <button type="button" class="block">Book a class</button>
                             </div>
                         </div>
