--- a/nxtecs/skills.html
+++ b/nxtecs/skills.html
@@ -285,8 +285,63 @@
                 </div>
 
             </div>
-        </section><!-- End Team Section -->
+        </section>
+        <!-- End Team Section -->
+        <!-- footer Section -->
+
+        <footer class="footer-area pt-65 pb-45" data-background="assets/img/bg/fot-01-bg.png">
+            <div class="container">
+                <div class="row mb-55 no-gutters align-items-center">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12">
+                        <div class="footer-logo">
+                            <!--<a href="index.html"><img src="assets/img/logo/footer-01-logo.png" alt=""></a>-->
+							<img src="assets/img/side_bar_logo.png" style="width:200px;" alt="logo">
+                        </div>
+                    </div>
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
+                        <div class="footer-social-icon text-right pb-70">
+                            <a class="fot-fb active pb-70" href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
+                            <a class="fot-twitter pb-70" href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                            <a class="fot-google pb-70" href="#"><i class="fab fa-youtube"></i> Youtube</a>
+                            <a class="fot-insta pb-70" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="copyright-area mt-15 text-center pt-20 pb-20">
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <div class="copyright-text">
+                                <p>Copyright © 2022 <a href="#">Courses</a> All Rights Reserved.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+<!--End footer Section -->
     </main>
+    <!-- JS here -->
+    <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/isotope.pkgd.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
+    <script src="assets/js/metisMenu.min.js"></script>
+    <script src="assets/js/jquery.meanmenu.min.js"></script>
+    <script src="assets/js/ajax-form.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/waypoints.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
+    <script src="assets/js/jquery.scrollUp.min.js"></script>
+    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/jquery.nice-select.js"></script>
+    <script src="assets/js/jquery.easypiechart.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
