--- a/nxtecs/cybersecurity.html
+++ b/nxtecs/cybersecurity.html
@@ -162,7 +162,7 @@
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
                         <div class="page-title text-center">
-                            <h1>Cyber security</h1>
+                            <h1>Cyber Security</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
                                     <li><a href="index.html">Home <i class="far fa-chevron-right"></i></a></li>
@@ -178,7 +178,7 @@
         <section id="team" class="team">
             <div class="container">
                 <div class="section-title">
-                    <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>About Cyber security</h2> &nbsp; &nbsp;&nbsp;&nbsp;
+                    <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>About Cyber Security</h2> &nbsp; &nbsp;&nbsp;&nbsp;
                     <hr>
                     <p></p>
                 </div>
