--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -177,7 +177,7 @@
         <!--page-title-area end-->
         <section id="team" class="team">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title1">
                     <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>About DevOps</h2> &nbsp; &nbsp;&nbsp;&nbsp;
                     <hr>
                     <p></p>
@@ -220,7 +220,7 @@
         <section id="team" class="team">
             <div class="container" data-aos="fade-down">
 
-                <div class="section-title">
+                <div class="section-title1">
                     <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>Our Trainers</h2> &nbsp; &nbsp;&nbsp;&nbsp;
                     <hr>
                     <p></p>
