--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -835,7 +835,7 @@
                                         <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                                         <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
                                         <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-                                        <a href="#" class="google-plus"><i class="fab fa-skype"></i></a>
+                                        <a href="#" class="google-plus"><i class="fab fa-whatsapp"></i></a>
                                         <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
                                     </div>
                                 </div>
