--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -844,11 +844,11 @@
                             <div class="col-lg-2 col-md-6 footer-links">
                                 <h4>Useful Links</h4>
                                 <ul>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Home</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">About us</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Skills</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Contact us</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Privacy policy</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="index.html" class="link">Home</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About us</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact us</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a></li>
                                 </ul>
                             </div>
 
