--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -300,7 +300,7 @@
         </div>
         <!-- contact-area-end -->
         <footer id="footer">
-            <div class="footer-top">
+            <div class="footer-top"> <br>
                 <div class="container">
                     <div class="row">
 
@@ -363,7 +363,7 @@
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post">
-                                <input type="email" name="email"><input class="link1" type="submit" value="Submit">
+                                <input type="email" name="email"> <br><input class="link1" type="submit" value="Submit">
                             </form>
 
                         </div>
