--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -831,13 +831,7 @@
                                         <strong>Phone:</strong> +91 1234567890<br>
                                         <strong>Email:</strong> info@NXTECS.com<br>
                                     </p>
-                                    <div class="social-links mt-3">
-                                        <a href="#" class="link"><i class="fab fa-twitter"></i></a>
-                                        <a href="#" class="link"><i class="fab fa-facebook"></i></a>
-                                        <a href="#" class="link"><i class="fab fa-instagram"></i></a>
-                                        <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
-                                        <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
-                                    </div>
+
                                 </div>
                             </div>
 
@@ -888,18 +882,29 @@
                 </div>
 
                 <div class="container1">
+                    <div class="social-links mt-3">
+                        <a href="#" class="link"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="link"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                        <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                    <br>
+                </div>
+                <div class="container1">
                     &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
                 </div>
-                <!-- <div class="credits">
+        </div>
+        <!-- <div class="credits">
                          All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
                        
                     </div> -->
 
-            </footer><!-- End Footer -->
-            <!-- footer-area-end -->
+        </footer><!-- End Footer -->
+        <!-- footer-area-end -->
     </main>
     <!-- JS here -->
     <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
