--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -97,7 +97,7 @@
         <div class="offset-sidebar">
             <div class="offset-widget offset-logo mb-30">
                 <a href="index.php">
-                    <img src="assets/img/side_bar_logo.png" style="width:200px;" alt="logo">
+                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -125,7 +125,7 @@
             <ul id="mobile-menu-active">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <!--<li><a href="course.html">AEM</a></li>-->
+                <li><a href="course.html">Courses</a></li>
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
@@ -469,7 +469,7 @@
                                         </div>
                                         <div class="client-say-content">
                                             <h4>Sana</h4>
-                                            <span>Student</span>
+                                            - <span>Student</span>
                                         </div>
                                     </div>
                                 </div>
@@ -490,7 +490,7 @@
                                         </div>
                                         <div class="client-say-content">
                                             <h4>Varshan Prabhu</h4>
-                                            <span>Student</span>
+                                            - <span>Student</span>
                                         </div>
                                     </div>
                                 </div>
