--- a/nxtecs/blog.html
+++ b/nxtecs/blog.html
@@ -103,7 +103,7 @@
         <div class="offset-sidebar">
             <div class="offset-widget offset-logo mb-30">
                 <a href="index.html">
-                    <img src="assets/img/side_bar_logo.png" style="width:200px;" alt="logo">
+                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -132,7 +132,7 @@
 
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <!--<li><a href="course.html">AEM</a></li>-->
+                <li><a href="course.html">Courses</a></li>
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
