--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -98,7 +98,7 @@
         <div class="offset-sidebar">
             <div class="offset-widget offset-logo mb-30">
                 <a href="index.php">
-                    <img src="assets/img/side_bar_logo.png" style="width:200px;" alt="logo">
+                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
                 </a>
             </div>
             <div class="offset-widget mb-40">
@@ -657,7 +657,7 @@
                                             </div>
                                             <div class="client-say-content">
                                                 <h4>Sana</h4>
-                                                <span>Student</span>
+                                                - <span>Student</span>
                                             </div>
                                         </div>
                                     </div>
@@ -678,7 +678,7 @@
                                             </div>
                                             <div class="client-say-content">
                                                 <h4>Varshan Prabhu</h4>
-                                                <span>Student</span>
+                                                - <span>Student</span>
                                             </div>
                                         </div>
                                     </div>
