--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -102,7 +102,7 @@
         <div class="offset-sidebar">
             <div class="offset-widget offset-logo mb-30">
                 <a href="index.html">
-                    <img src="assets/img/side_bar_logo.png" style="width:200px;" alt="logo">
+                    <img src="assets/img/4x/White_2@4x.png" style="width:200px;" alt="logo">
                 </a>
             </div>
             <div class="offset-widget mb-40">
