--- a/kinder/preview.colorlib.com/theme/kindergarten/index.html
+++ b/kinder/preview.colorlib.com/theme/kindergarten/index.html
@@ -607,7 +607,7 @@
                 <div class="single-footer-caption mb-30">
 
                   <div class="footer-logo mb-25">
-                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                    <a href="index.html"><img src="" alt="LOGO"></a>
                   </div>
                   <div class="footer-tittle">
                     <div class="footer-pera">
