--- a/preview.colorlib.com/theme/instylr/index.html
+++ b/preview.colorlib.com/theme/instylr/index.html
@@ -50,7 +50,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">The Brand</a>
           </li>
-         <!-- <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>-->
           <li class="nav-item">
@@ -263,15 +263,16 @@
     </div>
   </div>
 
-  <footer class="footer-section" >
+  <footer class="footer-section">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-sm-6">
           <div class="footer-widget fw-about">
             <a class="navbar-brand site-logo" href="index.html#">
-              <h2><span>LOGO</span></h2> </a> 
-              <p>Fashion Designers</p>
-            
+              <h2><span>LOGO</span></h2>
+            </a>
+            <p>Fashion Designers</p>
+
             <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
               malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
             <div class="fw-social">
@@ -279,7 +280,7 @@
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-dribbble"></i></a>
-             <!-- <a href="#"><i class="fa fa-behance"></i></a>-->
+              <!-- <a href="#"><i class="fa fa-behance"></i></a>-->
             </div>
           </div>
         </div>
@@ -296,7 +297,7 @@
             </div>
             <div class="rp-item">
               <h4>Simple Blog Post</h4>
-             <!-- <span>20 January 2019</span>-->
+              <!-- <span>20 January 2019</span>-->
             </div>
           </div>
         </div>
