--- a/preview.colorlib.com/theme/instylr/about.html
+++ b/preview.colorlib.com/theme/instylr/about.html
@@ -50,9 +50,9 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">the Brand</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link" href="#">Shop</a>
           </li>
