--- a/kinder/preview.colorlib.com/theme/kindergarten/about.html
+++ b/kinder/preview.colorlib.com/theme/kindergarten/about.html
@@ -76,7 +76,7 @@
 
               <div class="col-xl-2 col-lg-2">
                 <div class="logo">
-                  <a href="index.html"><img src="" alt="LOGO"></a>
+                  <a href="index.html"><img src="" alt=""><span style="color: #ED078B; font-weight: bolder;">LOGO</span></a>
                 </div>
               </div>
               <div class="col-xl-10 col-lg-10">
