--- a/kinder/preview.colorlib.com/theme/kindergarten/login.html
+++ b/kinder/preview.colorlib.com/theme/kindergarten/login.html
@@ -49,7 +49,7 @@
             <div class="login-form">
 
                 <div class="logo-login">
-                    <a href="index.html"><img src="assets/img/logo/loder.png" alt=""></a>
+                    <a href="index.html"><img src="" alt="LOGO"></a>
                 </div>
                 <h2>Login Here</h2>
                 <div class="form-input">
