--- a/kinder/preview.colorlib.com/theme/kindergarten/register.html
+++ b/kinder/preview.colorlib.com/theme/kindergarten/register.html
@@ -50,7 +50,7 @@
             <div class="login-form">
 
                 <div class="logo-login">
-                    <a href="index.html"><img src="assets/img/logo/loder.png" alt=""></a>
+                    <a href="index.html"><img src="" alt="LOGO"></a>
                 </div>
                 <h2>Registration Here</h2>
                 <div class="form-input">
