--- a/preview.colorlib.com/theme/instylr/index.html
+++ b/preview.colorlib.com/theme/instylr/index.html
@@ -280,7 +280,7 @@
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-dribbble"></i></a>
-              <!-- <a href="#"><i class="fa fa-behance"></i></a>-->
+              <!-- <a href="#"><i class="fa fa-behance"></i></a> -->
             </div>
           </div>
         </div>
@@ -318,7 +318,8 @@
           <div class="footer-widget contact-widget">
             <h2 class="fw-title">Contact</h2>
             <ul>
-              <li><span>Address:</span>Main Str, no 23, New York</li>
+              <li><span>Address:</span> SE-106 38, Stockholm SWEDEN
+</li>
               <li><span>Phone:</span>+546 990221 123</li>
               <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
                   class="__cf_email__" data-cfemail="a5c8cac1c0c9e5c6cacbd1c4c6d18bc6cac8">[email&#160;protected]</a>
